# sec-filing-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  claude.md  pyproject.toml
.claude/: ralph-loop.local.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  demo.yml  release.yml
examples/: agent_sdk.py  basic_usage.py  batch_analysis.py  json_export.py
goal/: claude.md  phase2.md  phase3.md
marketing/: hackernews.md  linkedin.md  reddit_investing.md  reddit_python.md  twitter_thread.md
src/sec_filing_agent/: __init__.py  agent.py  classifier.py  cli.py  fetcher.py  router.py  sector.py  trends.py
src/sec_filing_agent/analyzers/: __init__.py  base.py  eight_k.py  ten_k.py  ten_q.py  xbrl.py
src/sec_filing_agent/diff/: __init__.py  analyzer.py  models.py  prompts.py  ui.py
src/sec_filing_agent/llm/: __init__.py  client.py  model_router.py  prompts.py
src/sec_filing_agent/models/: __init__.py  analysis.py  config.py  filing.py  sector.py  trends.py
src/sec_filing_agent/ui/: sector.py  terminal.py  trends.py
src/sec_filing_agent/watch/: __init__.py  alerts.py  monitor.py  store.py  watchlist.py
tests/: conftest.py  mock_data.py  test_analyzers.py  test_classifier.py  test_cli.py  test_error_handling.py  test_fetcher.py  test_llm.py  test_router.py  test_sector.py  test_trends.py  test_watchlist.py  test_xbrl.py
web/: app.py  requirements.txt
web/.streamlit/: config.toml
