[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sec-filing-agent"
version = "0.1.0"
description = "AI-powered SEC filing analysis agent using multi-stage LLM pipelines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "SEC Filing Agent Contributors" },
]
keywords = ["sec", "edgar", "filing", "analysis", "llm", "ai", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "anthropic>=0.39.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "mypy>=1.0.0",
    "ruff>=0.5.0",
    "respx>=0.21.0",
]
openai = [
    "openai>=1.0.0",
]
web = [
    "streamlit>=1.30.0",
]

[project.scripts]
sec-agent = "sec_filing_agent.cli:app"

[project.urls]
Homepage = "https://github.com/your-username/sec-filing-agent"
Repository = "https://github.com/your-username/sec-filing-agent"
Documentation = "https://github.com/your-username/sec-filing-agent#readme"
Issues = "https://github.com/your-username/sec-filing-agent/issues"
Changelog = "https://github.com/your-username/sec-filing-agent/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/sec_filing_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
